GS-8242 Fixed: - The compare button is not properly aligned in IE7.

--- a/src/webapp/res/css/district/districtHome.css
+++ b/src/webapp/res/css/district/districtHome.css
@@ -363,6 +363,14 @@ form#compareSchoolsForm input#compareSchoolsFormSubmit {
     position: relative;
     top: 7px;
 }
+
+* + html form#compareSchoolsForm input#compareSchoolsFormSubmit {
+    top: 4px;
+}
+
+* html form#compareSchoolsForm input#compareSchoolsFormSubmit {
+    top: 4px;
+}
 /* END compare schools */
 
 /* BEGIN breadcrumbs */
